local/logs/project.log
2018-05-03T15:08:31.949Z - normal: Load ~/.CocosCreator/settings.json
2018-05-03T15:08:31.952Z - normal: checking language setting...
2018-05-03T15:08:31.952Z - normal: Language: zh
2018-05-03T15:08:35.927Z - success: protocol editor-framework registered
2018-05-03T15:08:35.927Z - success: protocol app registered
2018-05-03T15:08:35.927Z - success: protocol theme registered
2018-05-03T15:08:35.927Z - success: protocol packages registered
2018-05-03T15:08:35.928Z - success: protocol unpack registerred
2018-05-03T15:08:35.928Z - success: protocol disable-commonjs registerred
2018-05-03T15:08:36.635Z - normal: connected!
2018-05-03T15:08:36.643Z - normal: Check project D:\Project\Dodger-cocos
2018-05-03T15:08:36.650Z - normal: Initializing Cocos2d
2018-05-03T15:08:37.860Z - normal: Initializing Asset Database
2018-05-03T15:08:37.960Z - success: protocol uuid registerred
2018-05-03T15:08:37.961Z - success: protocol db registerred
2018-05-03T15:08:37.961Z - success: protocol thumbnail registerred
2018-05-03T15:08:37.961Z - normal: Loading editor/builtin packages
2018-05-03T15:08:38.351Z - success: anysdk loaded
2018-05-03T15:08:38.579Z - success: assets loaded
2018-05-03T15:08:38.587Z - success: builder loaded
2018-05-03T15:08:38.595Z - success: cocos-analytics loaded
2018-05-03T15:08:38.607Z - success: console loaded
2018-05-03T15:08:38.679Z - success: fb-instant-games loaded
2018-05-03T15:08:38.688Z - success: hierarchy loaded
2018-05-03T15:08:38.690Z - success: inspector loaded
2018-05-03T15:08:38.691Z - success: keystore loaded
2018-05-03T15:08:38.695Z - success: node-library loaded
2018-05-03T15:08:38.696Z - success: package-asset loaded
2018-05-03T15:08:38.698Z - success: preferences loaded
2018-05-03T15:08:38.699Z - success: project-exporter loaded
2018-05-03T15:08:38.738Z - success: project-importer loaded
2018-05-03T15:08:38.740Z - success: project-settings loaded
2018-05-03T15:08:38.741Z - success: ui-kit loaded
2018-05-03T15:08:38.748Z - success: ui-grid loaded
2018-05-03T15:08:38.751Z - success: scene loaded
2018-05-03T15:08:38.752Z - success: sprite-editor loaded
2018-05-03T15:08:38.755Z - success: store loaded
2018-05-03T15:08:38.759Z - success: timeline loaded
2018-05-03T15:08:38.759Z - normal: Loading builtin packages
2018-05-03T15:08:38.763Z - success: asset-db-debugger loaded
2018-05-03T15:08:38.765Z - success: code-editor loaded
2018-05-03T15:08:38.770Z - success: color-picker loaded
2018-05-03T15:08:38.772Z - success: package-manager loaded
2018-05-03T15:08:38.800Z - success: sdkbox loaded
2018-05-03T15:08:38.802Z - success: tester loaded
2018-05-03T15:08:38.805Z - success: ui-kit-preview-extra loaded
2018-05-03T15:08:38.806Z - success: ui-kit-preview loaded
2018-05-03T15:08:38.808Z - success: ui-tree loaded
2018-05-03T15:08:40.345Z - normal: Initializing project D:\Project\Dodger-cocos
2018-05-03T15:08:40.351Z - normal: Loading packages
2018-05-03T15:08:40.361Z - normal: Watching packages
2018-05-03T15:08:40.396Z - normal: Run Application
2018-05-03T15:08:41.663Z - success: preview server running at http://localhost:7456
2018-05-03T15:08:48.234Z - normal: 1.9.1
2018-05-03T16:03:50.652Z - failed: [db-task][sync-changes] Failed to import asset D:\Project\Dodger-cocos\assets\Script\BulletControl.js, message: Compile error: SyntaxError: D:/Project/Dodger-cocos/assets/Script/BulletControl.js: Unexpected token, expected , (30:41)
  28 |         //     }
  29 |         // },
> 30 |         Turrent: require('TurretControl');
     |                                          ^
  31 |     },
  32 | 
  33 |     // LIFE-CYCLE CALLBACKS:
    at Parser.pp$5.raise (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (D:\Program Files\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-05-03T16:06:06.242Z - error: Reference "Turrent" of "Bullet<BulletControl>" to external scene object "Turret" can not be saved in prefab asset.
    at D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:4424
    at t (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:563)
    at visitObjTypeProperties (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:614)
    at D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:4187
    at visitNode (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:197)
    at Object.PrefabUtils.getDumpableNode (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:4163)
    at Object.PrefabUtils.createPrefabFrom (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\prefab-utils.js:1:4749)
    at Object.createPrefab (D:\Program Files\CocosCreator\resources\app.asar\editor\page\scene-utils\index.js:1:15260)
    at HTMLElement.scene:create-prefab (file:///D:/Program%20Files/CocosCreator/resources/app.asar/editor/builtin/scene/panel/scene.js:1:10470)
